chore: 배경 색 변경 - 000000 -> 0A0A0A

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
 }
 
 body {
-  background-color: #000000;
+  background-color: #0A0A0A;
   font-family: 'PaperLodgy-Regular','Paper Lodgy-SemiBold','Paper Lodgy-Medium','PaperLodgy-Bold',sans-serif;
 }
 
