--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   max-width: 425px;
   margin: 0 auto;
 }
+
+html {
+  -webkit-tap-highlight-color: transparent;
+}
+
 @font-face {
   font-family: "PaperLodgy-Regular";
   src: url("../src/assets/Fonts/Paperlogy_Regular.ttf") format("truetype");
